# scitokens-jupyter

./: .gitignore  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml
sciauth/jupyter/: token_db.py  token_service.html  token_service.py
scitokens/jupyter/: py.typed  token_service.html  token_service.py
scitokens/jupyter/templates/: device-auth.html  index.html
