## Project requirements (PEP 518, https://python-poetry.org/).


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]


[tool.black]
line-length = 96
target-version = ["py38", "py39", "py310"]


[tool.isort]
line_length = 96
profile = "black"


[tool.mypy]
explicit_package_bases = true
namespace_packages = true

check_untyped_defs = true
strict_optional = true
no_implicit_optional = true

warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

color_output = false
pretty = true
show_error_codes = true

incremental = true
cache_dir = ".mypy"
sqlite_cache = true


[tool.poetry]
name = "scitokens_jupyter"
version = "0.0.3"
description = "Support for SciTokens for Project Jupyter"
license = "Apache-2.0"
authors = ["Brian Aydemir <baydemir@morgridge.org>"]
repository = "https://github.com/scitokens/scitokens-jupyter"
packages = [{ include = "scitokens" }]


[tool.poetry.dependencies]
## Dependencies that are tied to jupyterhub/k8s-hub:0.11.1.
python = "~3.8"
jupyterhub = "~1.3"
requests-oauthlib = "~1.3"
tornado = "~6.1"

## Other dependencies.
baydemir = "0.0.1"


[tool.poetry.dev-dependencies]
bandit = "~1.7"
black = "~22.3"
docutils = "~0.18"
isort = "~5.10"
mypy = "~0.942"
pre-commit = "~2.18"
pylint = "~2.13"
"ruamel.yaml.cmd" = "~0.5"
safety = "~1.10"


[tool.pylint.messages-control]
max-line-length = 96
disable = "invalid-name,missing-class-docstring,missing-function-docstring"
